--- a/sonos/Cargo.toml
+++ b/sonos/Cargo.toml
@@ -9,3 +9,6 @@ failure = "0.1"
 regex = "1"
 lazy_static = "1"
 ureq = "2.10.1"
+serde = "1.0.213"
+serde_derive = "1.0.213"
+serde-xml-rs = "0.6.0"
