--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 [dependencies]
 crossterm = "0.28.1"
 ratatui = "0.28.1"
-sonos = { path = "../sonos" }
+sonos = { path = "../sonos", features = ["mock"] }
 rand = "0.8"
