--- a/sonos/Cargo.toml
+++ b/sonos/Cargo.toml
@@ -14,3 +14,12 @@ serde_derive = "1.0.213"
 serde-xml-rs = "0.6.0"
 url = "2.5.2"
 xmltree = "0.11"
+# Conditional
+mockall = { version = "0.13", optional = true }
+
+[dev-dependencies]
+mockall = "0.13"
+
+[features]
+default = []
+mock = ["mockall"]
