--- a/sonos/Cargo.toml
+++ b/sonos/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 reqwest = { version = "0.12.23", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 quick-xml = { version = "0.36", features = ["serialize"] }
+uuid = { version = "1.0", features = ["v4"] }
+thiserror = "1.0"
 
 # Custom test configurations
 [[test]]
