--- a/sonos/Cargo.toml
+++ b/sonos/Cargo.toml
@@ -20,6 +20,10 @@ path = "tests/discovery.rs"
 name = "soap"  
 path = "tests/soap.rs"
 
+[[test]]
+name = "event_stream"
+path = "tests/event_stream.rs"
+
 # Examples
 [[example]]
 name = "state-monitor"
