--- a/sonos/Cargo.toml
+++ b/sonos/Cargo.toml
@@ -10,6 +10,10 @@ serde = { version = "1.0", features = ["derive"] }
 quick-xml = { version = "0.36", features = ["serialize"] }
 uuid = { version = "1.0", features = ["v4"] }
 thiserror = "1.0"
+warp = "0.3"
+tokio = { version = "1.0", features = ["full"] }
+bytes = "1.0"
+log = "0.4"
 
 # Custom test configurations
 [[test]]
