--- a/sonos/Cargo.toml
+++ b/sonos/Cargo.toml
@@ -15,6 +15,7 @@ warp = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 bytes = "1.0"
 log = "0.4"
+regex = "1.0"
 
 # Custom test configurations
 [[test]]
