--- a/sonos/Cargo.toml
+++ b/sonos/Cargo.toml
@@ -15,6 +15,8 @@ warp = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 bytes = "1.0"
 log = "0.4"
+percent-encoding = "2.3"
+html-escape = "0.2"
 
 # Custom test configurations
 [[test]]
